Simplify the running of tests under Jenkins slightly.